--- a/resources/js/assets/scss/custom/_main.scss
+++ b/resources/js/assets/scss/custom/_main.scss
@@ -10,3 +10,11 @@
 // If you have many custom styles, you can create and import additional files
 // For example you can create _component1.scss and include it as follows:
 // @import 'component1';
+
+.text-justify {
+    text-align: justify;
+}
+
+.first-capitalize::first-letter {
+    text-transform: uppercase;
+}
